[package]
name = "etherust"
version = "0.1.0"
edition = "2018"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "etherust"

[dependencies]
ggez = "0.7"
glam = { version = "0.20", features = ["mint"]}
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }