[package]
name = "etherust"
version = "0.1.0"
edition = "2018"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "etherust"

[dependencies]
good-web-game = "0.4.1"
glam = { version = "0.17.3", features = ["mint"]}
bitflags = "1.1.0"
bytemuck = "1.7.2"
bytemuck_derive = "1.0.1"
rustc-hash = "1.0.1"
lazy_static = "1.3.0"
mint = "0.5"
cgmath = { version = "0.17", features = ["mint"] }
glyph_brush = "0.7"
miniquad = "0.3.0-alpha.37"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
serde = "1"
serde_derive = "1"
log = "0.4"
tar = { version = "0.4", default-features = false }
lyon = { version = "0.17.5", optional = true }
smart-default = "0.6"
quad-snd = { version = "0.2.2", optional = true }
zip = { version = "0.5", default-features = false }
approx = "0.5"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.0"
twox-hash = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.8"

[features]
default = [ "mesh", "audio" ]
mesh = [ "lyon" ]
audio = [ "quad-snd" ]
log-impl = ["miniquad/log-impl"]
jpeg = [ "image/jpeg" ]

[dev-dependencies]
quad-rand = "0.2.1"
oorandom = "11"
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
num-traits = "0.2"
num-derive = "0.3"
